# FlashRT

./: CMakeLists.txt  README.md  USAGE.md
csrc/: bindings.cpp
csrc/gemm/: cutlass_sm100_fp16.cu  cutlass_sm100_fp16_sweep.cu  gemm_types_sm100_fp16.h
csrc/gemm/mega/: encoder_mlp_sm100.cu  flashrt_megakernel_geglu.cu  flashrt_megakernel_geglu_g8.cu  flashrt_megakernel_geglu_g8_kernel.hpp  flashrt_megakernel_geglu_kernel.hpp  flashrt_megakernel_kernel.hpp  flashrt_megakernel_single.cu  sm100_smem_aux_visitor.hpp
csrc/gemm/mega/cutlass/epilogue/collective/: collective_epilogue.hpp  sm100_epilogue_tma_warpspecialized.hpp
csrc/gemm/mega/cutlass/gemm/collective/: sm100_mma_warpspecialized.hpp
csrc/gemm/mega/cutlass/pipeline/: sm100_pipeline.hpp
csrc/kernels/: activation.cu  activation.cuh  quantize.cu  quantize.cuh
docs/: exec_contract.md  higgs_audio_v3.md  serving_design.md  serving_production.md  stable_api.md
exec/tests/: gate_pi05_exec.py  test_adopt_pi05.py
flash_rt/: api.py
flash_rt/core/quant/: calibrator.py
flash_rt/frontends/torch/: _higgs_audio_v3_fp8.py  _thor_spec_common.py  groot_n17_rtx_fp16.py  groot_n17_thor.py  groot_n17_thor_fp16.py  groot_n17_thor_fp8.py  groot_rtx_fp16.py  higgs_audio_v3_rtx.py  pi05_rtx.py  pi05_thor.py  pi05_thor_fp4.py  qwen36_rtx.py
flash_rt/hardware/thor/: shared_primitives.py
flash_rt/models/groot_n17/: pipeline_rtx_fp8.py  pipeline_thor.py
flash_rt/models/higgs_audio_v3/: __init__.py  pipeline_rtx.py
flash_rt/models/pi05/: pipeline_rtx.py  pipeline_rtx_fp16.py  pipeline_thor.py  pipeline_thor_batched.py
serving/: README.md
serving/qwen36_agent/: README.md  prefix.py  qwen36_engine.py  server.py  service.py
tests/: test_load_model_use_fp8_kwarg.py  test_qwen36_agent_capsule.py  test_qwen36_agent_gpu_split.py  test_qwen36_agent_serving_policy.py  test_qwen36_server_warmup.py
